Kubernetes/Production/deployment-authapi-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: auth-api-blue
    namespace: biitacora
spec:
    replicas: 1
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    minReadySeconds: 5 
    selector:
        matchLabels:    
            app: auth 
            service: api
            color: blue
    template:
        metadata:
            labels:
                app: auth
                service: api
                color: blue
        spec:
            containers:
            - image: acrbiitacorascus.azurecr.io/authapi:latest
              name: auth-api
              imagePullPolicy: Always
              ports:
              - containerPort: 80
                protocol: TCP
              - containerPort: 443
                protocol: TCP
