Kubernetes/Production/deployment-materializedviewsapi-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: materializedviews-api-blue
    namespace: biitacora
spec:
    replicas: 3
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    minReadySeconds: 5 
    selector:
        matchLabels:    
            app: materializedviews 
            service: api
            color: blue
    template:
        metadata:
            labels:
                app: materializedviews
                service: api
                color: blue
        spec:
            containers:
            - image: acrbiitacorascus.azurecr.io/materializedviewsapi:latest
              name: materializedviews-api
              imagePullPolicy: Always
              ports:
              - containerPort: 80
                protocol: TCP
              - containerPort: 443
                protocol: TCP
