Kubernetes/Production/service-business-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-api
  namespace: biitacora
spec:     
  ports:    
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  selector:
    app: business
    service: api
    color: blue
