Kubernetes/Production/service-devdemo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: dev-biitacora
spec:     
  ports:    
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  selector:
    app: demo
    service: api
    color: blue
