Kubernetes/Production/service-web-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-client
  namespace: dev-biitacora
spec:     
  ports:    
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  selector:
    app: web
    service: client
    color: blue
